# SRKWallet

client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: Header.jsx  PrivateRoute.jsx
client/src/context/: AuthContext.jsx
client/src/pages/: Approvewill.jsx  Dashboard.jsx  Home.jsx  Signin.jsx  Signup.jsx  Transfer.jsx  Vote.jsx  Will.jsx
solana-wallet/: Cargo.toml  keypair.json  wallet2.json
solana-wallet/src/: compiled_risk_data.json  main.rs
