[package]
name = "solana-wallet-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.26", features = ["derive"]}
solana-sdk = "1.14.5"
solana-client = "1.14.5"
tiny-bip39 = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Add Rocket dependencies
rocket = { version = "0.5.0-rc.3", features = ["json"] }
#rocket = { version = "0.5.0-rc.3", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # Required for Rocket's async
mongodb = "2.0"
bcrypt = "0.9"
bson = "2.0"
block-modes = "0.8"
block-padding = "0.2"
rand = "0.8" 
aes = "0.8" 
base64 = "0.13"
chrono = "0.4" 
cbc = { version = "0.2.0-pre.2" }
jsonwebtoken = "8.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rocket_cors = { version = "0.6.0-alpha3" }
futures = "0.3"
